# email_sender

./: .env  Cargo.toml  Readme.md
src/: config.rs  connection.rs  email_queue.rs  main.rs  schema.rs
