[package]
name = "email_sender"
version = "0.4.0"
authors = ["mait <mait.sarv@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
dotenv = "0.14"
envy = "0.4"
lazy_static = "1.4"
lettre = "0.9"
lettre_email = "0.9"
native-tls = "0.2"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"

r2d2 = "0.8"
r2d2-diesel = "1.0.0"
diesel = { version = "1.4.0", features = ["chrono", "mysql", "postgres", "sqlite", "uuidv07", "r2d2"] }


[features]
mysql = []
postgres = []
sqlite = []
default = ["mysql"]